--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -21,7 +21,7 @@
 	Als nächster Schritt werden die Teilprobleme genauer definiert. Der Technologierecherche entspringende Lösungsansätze sollen die Problembereiche möglichst gut abdecken.
 	
 	\subsection{Beurteilung der Teilprobleme}
-		Durch die Definition von passenden Beurteilungskriterien sollen die verschiedenen Lösungsansätze für ein Teilproblem taxiert werden. An dieser Stelle bieten sich die definierten Ziele der Teamcharta !!Referenz!! an:
+		Durch die Definition von passenden Beurteilungskriterien sollen die verschiedenen Lösungsansätze für ein Teilproblem taxiert werden. An dieser Stelle bieten sich die definierten Ziele der Teamcharta an:
 		
 		\begin{enumerate}
 			\item Treffgenauigkeit
