--- a/Dokumentation/Enddokumentation/Schluss/Ausblick.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Ausblick.tex
@@ -1,6 +1,6 @@
-﻿\subsection{Ausblick}
-Im nächsten Semester wird das erarbeitete Konzept in ein reales Produkt umgesetzt. Aus administrativer Sicht muss vermehrt und verbessert zu Beginn einer Meilensteinphase abgesprochen oder abgeklärt werden, welche Dokumente mit welchem spezifischen Inhalt erstellt sein müssen. Jedes Mal mussten vor einem Meilenstein die Dokumente überarbeitet oder gar neu erstellt werden, weil sich zeigte, dass der Inhalt nicht dem Geforderten entsprach.\\
+\subsection{Ausblick}
+Im nächsten Semester wird das erarbeitete Konzept realisiert. Aus administrativer Sicht muss vermehrt und besser zu Beginn einer jeden Meilensteinphase abgesprochen werden, welche Dokumente mit welchem spezifischen Inhalt erstellt werden müssen. Jedes Mal mussten vor einem Meilenstein die Dokumente überarbeitet oder gar neu erstellt werden, weil sich zeigte, dass der Inhalt nicht dem Geforderten entsprach.\\
 \\
-Mechanisch gesehen steht das Konzept, es fehlen jedoch noch einige CAD Zeichnungen, sowie eine geeignete Lösung für den Antriebsstrang der Schwungräder. Des Weiteren muss die Software entwickelt werden. Zu den Teilkomponenten Detector und ControllerCommunication wurden bereits erste Tests durchgeführt. Diese müssen jedoch in eine Smartphone-App integriert werden. Zu Test- und Demonstrationszwecken soll ausserdem der DesktopViewer weiter ausgebaut werden, um Feinabstimmungen über eine GUI-Applikation zu ermöglichen.\\
+Mechanisch gesehen steht das Konzept, es fehlen noch einige CAD Zeichnungen, sowie eine geeignete Lösung für den Antriebsstrang der Schwungräder. Des Weiteren muss die Software entwickelt werden. Es wurden bereits Tests zur Bluetooth-Kommunikation, der Objekt erkennung und der Kommunikation zwischen Controller und Smartphone durchgeführt. Diese einzelnen Komponenten müssen jedoch in einer homogenen Smartphone-App integriert werden. Zu Test- und Demonstrationszwecken soll ausserdem der DesktopViewer weiter ausgebaut werden, um Feinabstimmungen über eine GUI-Applikation zu ermöglichen.\\
 \\
-Ungewissheit besteht ebenfalls betreffend der Mitarbeit von Manuel Güdel. Da er das Modul PREN 2 bereits letztes Jahr absolviert hat, ist nicht sicher, ob er nächstes Semester offiziell an der Entwicklung weiterarbeiten kann. Inoffiziell hat er aber bereits seine Hilfe angeboten und wird das Team weiterhin so oft wie möglich unterstützen.
+Ungewissheit besteht ebenfalls betreffend der Mitarbeit von Manuel Güdel. Da er das Modul PREN 2 bereits letztes Jahr absolviert hat, ist noch nicht sicher, ob er nächstes Semester offiziell an der Entwicklung weiterarbeiten kann. Inoffiziell hat er aber bereits seine Hilfe angeboten und wird das Team weiterhin so gut wie möglich unterstützen.
