--- a/Dokumentation/Enddokumentation/Schluss/Rueckblick.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Rueckblick.tex
@@ -1,5 +1,5 @@
 \subsection{Rückblick}
 Eine wichtige Erkenntnis wurde im PREN1-Modul bezüglich kollaboratives Arbeiten gewonnen. Der Austausch aller Dateien fand via Dropbox statt. Dieses Modell zeigte jedoch mit der Zeit schwächen, vor allem bezüglich gemeinsames editieren eines Dokuments. Es wäre daher eine Diskussion wert, die Dokumente welche von mehreren Teammitgliedern bearbeitet werden, auf eine Plattform für kollaboratives Arbeiten (z.B. Google Drive) auszulagern und die Dropbox als reinen Dateienaustausch beizubehalten.\\
 \\
-Wir haben bewusst eine flache Teamhierarchie gewählt und managen unser Projekt so, dass jedes Teammitglied die Verantwortung für einen festgelegten Bereich erhält. Generelle Diskussionen zu Projektmanagement-Themen werden im Plenum besprochen und allfällige Entscheide gegebenenfalls gefällt. Bis zum jetzigen Zeitpunkt funktioniert diese Art der Zusammenarbeit ohne grosse Probleme und Reiberein.
+Wir haben bewusst eine flache Teamhierarchie gewählt und managen unser Projekt so, dass jedes Teammitglied die Verantwortung für einen festgelegten Bereich erhält. Generelle Diskussionen zu Projektmanagement-Themen werden im Plenum besprochen und allfällige Entscheide gegebenenfalls gefällt. Bis zum jetzigen Zeitpunkt funktioniert diese Art der Zusammenarbeit ohne grössere Probleme und Reibereien.
 Es hat sich gezeigt, dass man in Diskussionen rasch vom eigentlichen Thema abweicht oder nicht mehr zielgerichtet diskutiert. Alle Teammitglieder sollten vermehrt darauf bedacht sein, themenbezogen und effizient an einer Lösung zu diskutieren.
