--- a/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
@@ -1,5 +1,5 @@
 \subsubsection{Förderband}
-Da die Schwungräder durch den Abwurf um ca. 30\% abgebremst werden, müssen Sie nach jedem Wurf erneut auf die gewünschte Drehzahl beschleunigt werden. Deshalb hat die Zuführung der Bälle in Abständen zu erfolgen. Weiter müssen die einzelnen Tennisbälle immer mit der gleichen Geschwindigkeit bei den Schwungrädern eintreffen, damit eine konstante Wurfweite entsteht. Die beste Art, beides zusammen zu realisieren ist ein Förderband. Das Förderband wird zwischen den zwei Acrylglasplatten aufgespannt. Der Antrieb des Förderbandes erfolgt mit einem DC-Motor. Dieser wird mit einem Verhältnis von !!!!!!!!!!!!!!!!!!!!!i=5:1 übersetzt, um das benötigte Drehmoment an die Antriebstrommel von !!!!!!!!!!!!!!!!!!!!!!!Nm zu übertragen. Die Berechnungen dazu sind im Anhang ersichtlich. Auf dem Förderband, welches aus einem Flachbandriemen besteht, sind konvexe Führungsblätter angebracht. Diese sind so ausgerundet, damit der Ball möglichst lange geführt werden kann und die Führungsblätter nicht in Berührung der Schwungräder kommen. Die Führungsblätter werden voraussichtlich mit dem Förderband verschweisst.
+Da die Schwungräder durch den Abwurf um ca. 30\% abgebremst werden, müssen Sie nach jedem Wurf erneut auf die gewünschte Drehzahl beschleunigt werden. Deshalb hat die Zuführung der Bälle in Abständen zu erfolgen. Weiter müssen die einzelnen Tennisbälle immer mit der gleichen Geschwindigkeit bei den Schwungrädern eintreffen, damit eine konstante Wurfweite entsteht. Die beste Art, beides zusammen zu realisieren ist ein Förderband. Das Förderband wird zwischen den zwei Acrylglasplatten aufgespannt. Der Antrieb des Förderbandes erfolgt mit einem DC-Motor. Dieser wird mit einem Verhältnis von $i=5:1$ übersetzt, um das benötigte Drehmoment an die Antriebstrommel von $!!!!!!!!!!!!!!!!!!!!!!!Nm$ zu übertragen. Die Berechnungen dazu sind im Anhang ersichtlich. Auf dem Förderband, welches aus einem Flachbandriemen besteht, sind konvexe Führungsblätter angebracht. Diese sind so ausgerundet, damit der Ball möglichst lange geführt werden kann und die Führungsblätter nicht in Berührung der Schwungräder kommen. Die Führungsblätter werden voraussichtlich mit dem Förderband verschweisst.
 \newpage
 \begin{figure} [h!]
 	\centering
@@ -7,7 +7,7 @@ Da die Schwungräder durch den Abwurf um ca. 30\% abgebremst werden, müssen Sie
 	\caption{Grafik Förderband}
 	\label{fig:Grafik Förderband}	
 \end{figure}
-Aus Testversuchen der Ballzuführung wurde erkannt, dass für einen idealen Abwurf beide Räder zeitgleich den Ball einklemmen müssen. Somit müssen die Bälle zunächst unterhalb des oberen Schwungrades gefördert und anschliessend in einem $45^\cdot$ Winkel nach oben zugeführt werden. Dazu dient ein Führungselement. Die Gestaltung dafür wird sich durch Tests zeigen. Als Ideen stehen zwei Stangen oder ein Blech, welches die Bälle zu den Schwungrädern führt zur Auswahl. Die folgende Grafik zeigt eine Auswahl möglicher Ausführungen der Schaufeln am Band. (!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!BILD)
+Aus Testversuchen der Ballzuführung wurde erkannt, dass für einen idealen Abwurf beide Räder zeitgleich den Ball einklemmen müssen. Somit müssen die Bälle zunächst unterhalb des oberen Schwungrades gefördert und anschliessend in einem $45^\cdot$ Winkel nach oben zugeführt werden. Dazu dient ein Führungselement. Die Gestaltung dafür wird sich durch Tests zeigen. Als Ideen stehen zwei Stangen oder ein Blech, welches die Bälle zu den Schwungrädern führt zur Auswahl. Die folgende Grafik zeigt eine Auswahl möglicher Ausführungen der Schaufeln am Band.
 \begin{figure}
 	\centering
 	\includegraphics[width=0.9\textwidth]{Enddokumentation/CrashTestDummy.jpg}
