--- a/Dokumentation/Enddokumentation/Loesungskonzept/Schwungraeder.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Schwungraeder.tex
@@ -1,6 +1,6 @@
 \subsubsection{Schwungräder}
 Die Vortriebskraft für die Tennisbälle wird durch zwei Schwungräder übertragen. Der Schwungradantrieb wurde aus mehreren Gründen gewählt. Über die Drehzahl, Kraft der Motoren oder durch Übersetzungen lässt sich die Geschwindigkeit der Bälle nahezu stufenlos einstellen. Man kann durch vorhergehende Berechnungen die ungefähren Grössen, Leistungen und Kräfte eruieren und das System so auslegen, dass später nur noch Parameter geändert werden müssen ohne kostspielige Bauteile anzupassen oder gar zu ersetzten. Weiter ist durch die konkave Form der Schwungräder die Flugbahn der Bälle vorgegeben. Hier wird keine zusätzliche Ballführung gebraucht was Gewicht, Kosten und Platz spart. \\
-Die Räder sind konkav ausgearbeitet, so dass die Beschleunigung nicht nur über einen Punkt übertragen wird. So wird auch gewährleistet, dass die Kraft über eine grössere Fläche übertragen werden kann. Dadurch entsteht wiederum der Vorteil, dass die Beschleunigung geführt abläuft, wodurch ein gerichteter Wurf entsteht. So kann die vorhandene Rotationsenergie voll umfänglich den Tennisbällen übergeben werden. Die Ausrundung wurde durch den Radius des Tennisballes gegeben. Der Durchmesser der Schwungräder ist so festgelegt, dass mit der vorhandenen Masse ein gewisses Trägheitsmoment zur Verfügung steht. Dies ist nötig, damit bei der Beschleunigung der Tennisbälle die Schwungräder nicht zu stark abgebremst werden. Dennoch sollten sie nicht zu schwer oder zu gross sein, da das Gewicht einer der Faktoren in der Gesamtbewertung ist. Die Grösse ist deshalb auf einen Kompromiss gefallen. Durch den Durchmesser wird auch die Winkelgeschwindigkeit festgelegt. Die Schwungräder sind aus PVC gefertigt. Dieser Werkstoff ist einfach zu Bearbeiten und bietet zugleich eine genügend grosse Festigkeit. Die Räder sind mit einer speziellen Haftmatte beschichtet, damit die Kraft optimal auf den Ball übertragen werden kann. Somit wird ein höherer Haftreibungskoeffizient erreicht und ein Durchrutschen der Bälle verhindert werden. Die Schwungräder besitzen grosses Optimierungspotential, da die vorhandene Rotationsenergie der entscheidende Faktor ist.\\
+Die Räder sind konkav ausgearbeitet, so dass die Beschleunigung nicht nur über einen Punkt übertragen wird. So wird auch gewährleistet, dass die Kraft über eine grössere Fläche übertragen werden kann. Dadurch entsteht wiederum der Vorteil, dass die Beschleunigung geführt abläuft, wodurch ein gerichteter Wurf entsteht. So kann die vorhandene Rotationsenergie voll umfänglich den Tennisbällen übergeben werden. Die Ausrundung wurde durch den Radius des Tennisballes gegeben. Der Durchmesser der Schwungräder ist so festgelegt, dass mit der vorhandenen Masse ein gewisses Trägheitsmoment zur Verfügung steht. Dies ist nötig, damit bei der Beschleunigung der Tennisbälle die Schwungräder nicht zu stark abgebremst werden. Dennoch sollten sie nicht zu schwer oder zu gross sein, da das Gewicht einer der Faktoren in der Gesamtbewertung ist. Die Grösse ist deshalb auf einen Kompromiss gefallen. Durch den Durchmesser wird auch die Winkelgeschwindigkeit festgelegt. Die Schwungräder sind aus PVC \footnote{\textbf{P}oly\textbf{V}inyl \textbf{C}hlorid} gefertigt. Dieser Werkstoff ist einfach zu Bearbeiten und bietet zugleich eine genügend grosse Festigkeit. Die Räder sind mit einer speziellen Haftmatte beschichtet, damit die Kraft optimal auf den Ball übertragen werden kann. Somit wird ein höherer Haftreibungskoeffizient erreicht und ein Durchrutschen der Bälle verhindert werden. Die Schwungräder besitzen grosses Optimierungspotential, da die vorhandene Rotationsenergie der entscheidende Faktor ist.\\
 Die Achsen der zwei Schwungräder sind im Winkel von 45° zur Bodenplatte angeordnet. Der Abschusswinkel ist so gewählt, dass die Tennisbälle in einem genug grossen Einschlagwinkel im Zielbereich landen und keine Möglichkeit besteht mit dem Korbrand zu kollidieren. Das Verhältnis von Wurfkraft zu Wurflänge ist beim Winkel von 45° auch am besten. Die Wurfweite wird durch die Drehzahl der Schwungräder gesteuert werden. Der Achsenabstand der beiden Räder bestimmt die Presskraft der einzelnen Bälle. Dies wiederum trägt zur Abbremsung der Schwungräder bei, welche nicht zu gross sein darf, damit die einzelnen Bälle in kurzem Abstand hintereinander zugeführt werden können. 
 \begin{figure}[h!]
 	\centering
