--- a/Dokumentation/Enddokumentation/Loesungskonzept/Funktionsbeschreibung.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Funktionsbeschreibung.tex
@@ -7,15 +7,14 @@ Winkel für die Justierung der Abwurfeinheit des Ballwerfers berechnet.\\
 Nach der Übermittlung des Winkels an den Controller richtet der Stellantrieb die Abwurfeinheit in die gewünschte Wurfposition aus. 
 Ein Förderband führt anschliessend die Bälle den Schwungrädern zu, wo diese auf ihre Abwurfgeschwindigkeit beschleunigt werden. 
 Die Bälle verlassen nacheinander das Gerät und fliegen in einer Wurfparabel direkt in den Korb. Sobald sich alle Bälle im Korb befinden (zeitbedingt),
-wird das akustische Endsignal auf dem Smartphone ausgegeben.\\
+wird das akustische Endsignal auf dem Smartphone ausgegeben.
 \newpage
-
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.9\textwidth]{Enddokumentation/Loesungskonzept/Bilder/FlowOnChart_v2.jpg}
 	\caption{Ablaufdiagramm zur Funktionsbeschreibung}
 	\label{fig:FlowChart}
 \end{figure}
-Die Grafik in Abbildung \ref{fig:FlowChart} stellt den schematischen Ablauf der oben erwähnten Funktionen dar. 
+\noindent Die Grafik in Abbildung \ref{fig:FlowChart} stellt den schematischen Ablauf der oben erwähnten Funktionen dar. 
 Einige Teilschritte des Ablaufes, wie zum Beispiel das Beschleunigen der Schwungräder, werden 
 je nach zeitlicher Dauer oder möglicher auftretenden Störungen (in Form von Vibrationen) verschoben.
