--- a/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Testbericht.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Testbericht.tex
@@ -15,7 +15,7 @@
 \fi
     Das Schema des Gesamtaufbaus des Tests ist in der Abbildung 
     \ref{abb:MotoransteuerungSchema} ersichtlich. Die 3-Phasen H-Brücke 
-    im oberen grünen Rechteck wird direkt vom FPGA angesteuert. Die Hardware 
+    im oberen grünen Rechteck wird direkt vom FPGA \footnote{\textbf{F}ield-\textbf{P}rogrammable \textbf{G}ate \textbf{A}rray} angesteuert. Die Hardware 
     dieser Brücke ermöglicht eine voll galvanisch getrennte Ansteuerung 
     mit 3.3V Logikpegeln. Diese Brücke wurde zur Verfügung gestellt und direkt
     implementiert. Die Rekonstruktion der Hallsensoren-Signale findet im rot 
