--- a/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
@@ -1,8 +1,7 @@
 \subsubsection{Smartphone als Master}
 	Ein Smartphone vereint mehrere für die Realisation des Produkts benötigte Komponenten (Kamera, drahtlose Schnittstelle, Recheneinheit, Endsignalausgabe) 
 	in einem Gerät. Des Weiteren sind heutige Smartphones verhältnismässig leistungsfähig, die Berechnungen für die Objekterkennung 
-	können direkt auf dem Gerät erfolgen und durch den USB-Port wird eine sichere Verbindung zum Controller gewährleistet.\\
-	Die Alternative, einzelne Module (Kamera, drahtlose Schnittstelle, Recheneinheit) zu verbauen, 
+	können direkt auf dem Gerät erfolgen und durch den USB-Port wird eine sichere Verbindung zum Controller gewährleistet. Die Alternative, einzelne Module (Kamera, drahtlose Schnittstelle, Recheneinheit) zu verbauen, 
 	gewährleistet eine erhöhte Flexibilität, allerdings verbunden mit steigendem Aufwand und höherem Preis. 
 	Zudem hätte die Verwendung von Einzelmodulen unter Umständen eine Gewichtszunahme zur Folge, da keine vergleichbare Kompaktheit wie bei einem Smartphone besteht. 
 	Der Einsatz eines Smartphones bietet im Vergleich zu einzelnen Modulen somit entscheidende Vorteile.\\
