Geräteübersicht Tabellenbeschriftung korrigiert

--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -20,7 +20,7 @@ Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewä
 %		\caption{Geräteübersicht}
 %		\label{fig:Geraeteuebersicht}
 %\end{figure}}\\
-\begin{figure}[h!]
+\begin{table}[h!]
 	\begin{tabular}{|c|c|p{7.5cm}|}
 		\hline \textbf{Pos} & \textbf{Bezeichnung} & \textbf{Funktion} \\ 
 		\hline 1 & Startgerät (Computer) & Senden des Startbefehls, Empfangen des Endbefehl, Akustische und visuelle Signalausgabe
@@ -40,5 +40,5 @@ Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewä
 	\centering
 	\caption{Bezeichnung der Teilkomponenten}	
 	\label{tab:BezTeilkomponenten}
-\end{figure}\\
+\end{table}\\
 In den folgenden Abschnitten wird nach dem zeitlichen Ablauf des Balles, die einzelnen Komponenten des Ballwerfers näher beschrieben. 
