--- a/Dokumentation/Enddokumentation/Abstract.tex
+++ b/Dokumentation/Enddokumentation/Abstract.tex
@@ -1,2 +1,2 @@
 \section*{Abstract}
-Die nachfolgende Dokumentation beschreibt den Konzeptfindungsprozess zur Herstellung eines autonomen Ballwerfers. Die Aufgabe bestand darin, eine Konstruktion zum Werfen von fünf Tennisbällen über eine Kurzdistanz in einen Korb zu entwickeln. Anhand einer Funktionsskizze wurde die Aufgabenstellung in einzelne Teilprobleme bestimmt, zu deren Bewertung ein Morphologischer Kasten zu Hilfe gezogen wird. Zur Bewertung der einzelnen Lösungen wiederum dient das Erstellen von Testmodellen. In einem Feinkonzept wurden weitere Subteilprobleme definiert. Mögliche Lösungen zu diesen stehen in Form eines Auswahlkataloges zur Verfügung. Erarbeitete Berechnungen unterstützen die Bestimmung der Auslegung der einzelnen Komponenten. Als Gesamtlösung kristallisierte sich der Einsatz von zwei Schwungrädern, die durch bürstenlose Motoren angetrieben sind, heraus. Die Ansteuerung soll mit einem eigens entwickelten Regler erfolgen. Mit einer Smartphone-Kamera wird ein Bild erzeugt, welches anschliessend durch eine eigens entwickelte Applikation ausgewertet und im Zuge dessen die Position des Korbes bestimmt wird. Die selber entwickelten Komponenten Korberkennung und Regelung bieten eine höhere Flexibilität und stellen zugleich einen erhöhten Lerneffekt sicher.
+Die nachfolgende Dokumentation beschreibt den Konzeptfindungsprozess zur Herstellung eines autonomen Ballwerfers. Die Aufgabe bestand darin, eine Konstruktion zum Werfen von fünf Tennisbällen über eine Kurzdistanz in einen Korb zu entwickeln. Anhand einer Funktionsskizze wurde die Aufgabenstellung in einzelne Teilprobleme bestimmt, zu deren Bewertung ein Morphologischer Kasten zu Hilfe gezogen wird. Zur Bewertung der einzelnen Lösungen dient wiederum das Erstellen von Testmodellen. In einem Feinkonzept wurden weitere Subteilprobleme definiert. Mögliche Lösungen zu diesen stehen in Form eines Auswahlkataloges zur Verfügung. Erarbeitete Berechnungen unterstützen die Bestimmung der Auslegung der einzelnen Komponenten. Als Gesamtlösung kristallisierte sich der Einsatz von zwei Schwungrädern, die durch bürstenlose Motoren angetrieben sind, heraus. Die Ansteuerung soll mit einem eigens entwickelten Regler erfolgen. Mit einer Smartphone-Kamera wird ein Bild erzeugt, welches anschliessend durch eine eigens entwickelte Applikation ausgewertet und im Zuge dessen die Position des Korbes bestimmt wird. Die selber entwickelten Komponenten Korberkennung und Regelung bieten eine höhere Flexibilität und stellen zugleich einen erhöhten Lerneffekt sicher.
