--- a/Dokumentation/Enddokumentation/Loesungskonzept/Versorgungskonzept.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Versorgungskonzept.tex
@@ -1,2 +1,2 @@
 \subsection{Versorgungskonzept}
-	Das Smartphone, die Controller-Hardware und die Motoren benötigen jeweils bestimmte Spannungen, die erzeugt werden müssen. Diese werden aus einer Hauptspannung generiert. Je nach Standfestigkeit der Mechanik wird die Umsetzung mittels eines externen Netzteils oder mit Akkumulatoren umgesetzt. Sollte die Standfestigkeit ausreichend sein, so wird die Hauptversorgung mittels eines externen Netzteils umgesetzt. Falls dies nicht Fall sein sollte, wird die Spannungsversorgung mittels Akkumulatoren umgesetzt. Dies bietet den Vorteil, dass das Gewicht die Standfestigkeit unterstützt und zum Anderen können die Akkumulatoren während dem Wiegen entfernt werden.
+	Das Smartphone, die Controller-Hardware und die Motoren benötigen jeweils bestimmte Spannungen, die erzeugt werden müssen. Diese werden aus einer Hauptspannung generiert. Die Spannung kann von Akkumulatoren oder einem externen Netzgerät bezogen werden. Da das Gewicht der Spannungsversorgung beim Wiegen nicht dazu gezählt wird, könnten Akkumulatoren allenfalls als Ballastgewicht eingesetzt werden. Sollte sich zeigen, dass zusätzliches Gewicht nötig ist um den Ballwerfer zu stabilisieren, werden Akkumulatoren eingesetzt. Ansonsten wird die benötigte Spannung von einem Netzgerät bezogen.
