--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -49,6 +49,7 @@
     \input{Enddokumentation/Loesungskonzept/Geraeteuebersicht}
     \input{Enddokumentation/Loesungskonzept/Startgeraet}
     \input{Enddokumentation/Loesungskonzept/SmartphoneAlsMaster}
+    \newpage
     \input{Enddokumentation/Loesungskonzept/Controller}
     \input{Enddokumentation/Loesungskonzept/AufbauMechanik}
     \input{Enddokumentation/Loesungskonzept/Stelleinheit}
