--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -14,12 +14,12 @@ der Tennisball wird dazwischen ausgestossen. Die Zuführung der Tennisbälle erf
 Das Förderband muss die Bälle mit konstanter Geschwindigkeit zu den Schwungrädern transportieren, 
 damit alle Tennisbälle die gleiche Startenergie aufweisen. 
 Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewährleistet. \\
-%\begin{figure}[h!]
-%		\centering
-%		\includegraphics[width=0.9\textwidth]{Enddokumentation/Loesungskonzept/Bilder/%Geraeteuebersicht.jpg}
-%		\caption{Geräteübersicht}
-%		\label{fig:Geraeteuebersicht}
-%\end{figure}}\\
+\begin{figure}[h!]
+		\centering
+		\includegraphics[width=0.95\textwidth,clip,trim=5mm 60mm 15mm 80mm] {Enddokumentation/Loesungskonzept/Bilder/Beschreibung_Komponenten-edited.jpg}
+		\caption{Geräteübersicht}
+		\label{fig:Geraeteuebersicht}
+\end{figure}
 \begin{table}[h!]
 	\begin{tabular}{|c|c|p{7.5cm}|}
 		\hline \textbf{Pos} & \textbf{Bezeichnung} & \textbf{Funktion} \\ 
