Ansteuerung Tabellenbeschriftung korrigiert

--- a/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Ansteuerung.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Ansteuerung.tex
@@ -110,7 +110,7 @@
         Signal $U_h$ symbolisiert den Highside-Transistor der Phase U auf der 
         H-Brücke und die Spalte $U_l$ entspricht dem Lowside-Transistor.\\      
         
-        \begin{figure}[h!]
+        \begin{table}[h!]
             \begin{tabular}{ccc||cc|cc|cc||c}
                  $H_1$ & $H_2$ & $H_3$ & $U_h$ & $U_l$ & $V_h$ & $V_l$ & $W_h$ & $W_l$ & Illegal\\
             \hline 0   &   0   &   0   &   0   &   0   &   0   &   0   &   0   &   0   &   1\\
@@ -125,7 +125,7 @@
            	\centering
            	\caption{Wahrheitstabelle der Ansteuerung} 
             \label{abb:WahrheitstabelleAnsteuerung}
-        \end{figure}
+        \end{table}
         \parindent 0pt Die Tabelle in Abbildung 
         \ref{abb:WahrheitstabelleAnsteuerung} kann pro Signal zu folgenden 
         logischen Verknüpfung vereinfacht werden\\
