Kosten Tabellenbeschriftung korrigiert

--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
@@ -1,6 +1,6 @@
 \subsection{Kosten}
 
-\begin{figure}[h!]
+\begin{table}[h!]
 
   \centering
  
@@ -47,4 +47,4 @@ Antrieb Schwungräder:  & 2    & Zahnrad Z15 &  Fr. 2.88   &  Fr. 5.76  \\
     
      \caption{Kostentabelle}
 
-\end{figure}
+\end{table}
