--- a/Dokumentation/Enddokumentation/Tests/ZylinderTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/ZylinderTest.tex
@@ -10,8 +10,8 @@
 
 
 Ziel des Testes:   \\
-Das Ziel dieses Testes bestand darin, den gebauten Prototyp auf die 
-Wurfwiederholgenauigkeit zu testen. 
+Der gebaute Prototyp soll auf die 
+Wurfwiederholgenauigkeit getestet werden. 
 Fazit/ Verbesserungsvorschlag: \\
 Ein Pneumatikzylinder arbeitet sehr zielgenau und schnell. 
 Zu verbessern: 
