--- a/Dokumentation/Funktionstests/Pneumatikzylinder.tex
+++ b/Dokumentation/Funktionstests/Pneumatikzylinder.tex
@@ -5,7 +5,7 @@
 \textit{Datum}:           & 08.10.2014   \\
 \textit{Ort}:             & Bachmann Engineering AG (Zofingen) \\
 \textit{Tester}:          & Gruppe 32\\
-\textit{Ziel des Testes}: & Das Ziel dieses Testes bestand darin, den gebauten Prototyp auf die Wurfwiederholgenauigkeit zu testen. \\
+\textit{Ziel des Testes}: & Der gebaute Prototyp wird auf die Wurfwiederholgenauigkeit getestet. \\
 \textit{Fazit / Verbesserungs-\newline vorschlag}: & Ein Pneumatikzylinder arbeitet sehr zielgenau und schnell. Falls dieses Verfahren in die engere Auswahl kommt, müssen die Parameter wie Beschleunigung, Abschussgeschwindigkeit und Druck berechnet werden.\\ 
 \textit{Ziel erreicht}:& Ja\\
 \end{tabular}
