--- a/Dokumentation/Enddokumentation/Abstract.tex
+++ b/Dokumentation/Enddokumentation/Abstract.tex
@@ -1,14 +1,11 @@
-\section*{Abstract}
+﻿\section*{Abstract}
 
-Da wir uns nicht einigen konnten was von einem Abstract in diesem Dokument zu erwarten ist haben wir uns geeinigt, dass wir beide Versionen in das Dokument einbinden.
-Bitte geben sie uns Feedback welches Abstract sie als besser empfingen.
+Da wir nicht einer Meinung sind, welches Abstract aussagekräftiger ist, bitte wir Sie um Ihr Feedback.
 
 \subsection{Abstract 1}
 Die nachfolgende Dokumentation beschreibt den Konzeptfindungsprozess zur Herstellung eines autonomen Ballwerfers. Die Aufgabe bestand darin, eine Konstruktion zum Werfen von fünf Tennisbällen über eine Kurzdistanz in einen Korb zu entwickeln. Anhand einer Funktionsskizze wurde die Aufgabenstellung in einzelne Teilprobleme zerlegt, zu deren Bewertung ein Morphologischer Kasten gehört.
-
 Zur Bewertung der einzelnen Lösungen dient wiederum das Erstellen von Testmodellen. In einem Feinkonzept wurden weitere Subteilprobleme definiert. Mögliche Lösungen zu diesen stehen in Form eines Auswahlkataloges zur Verfügung. Erarbeitete Berechnungen unterstützen die Bestimmung der Auslegung der einzelnen Komponenten. Als Gesamtlösung kristallisierte sich der Einsatz von zwei Schwungrädern, die durch bürstenlose Motoren angetrieben sind, heraus.
-
 Die Ansteuerung soll mit einem eigens entwickelten Regler erfolgen. Mit einer Smartphone-Kamera wird ein Bild erzeugt, welches anschliessend durch eine eigens entwickelte Applikation ausgewertet und im Zuge dessen die Position des Korbes bestimmt wird. Die selber entwickelten Komponenten Korberkennung und Regelung bieten eine höhere Flexibilität und stellen zugleich einen erhöhten Lerneffekt sicher.
 
 \subsubsection{Abstract 2}
-In der nachfolgenden Dokumentation wird der Prozess der Konzeptfindung für die Herstellung eines autonomen Ballwerfers beschrieben. Durch die Aufteilung der Aufgabenstellung in Problembereiche werden mehrere grobe Konzepte geschaffen. Von den erstellten Konzepten wurde eines weiter zu einem Feinkonzept ausgearbeitet, in welchem sämtliche verwendeten Komponenten spezifiziert werden. Als erstes wird das Startsignal von einem Laptop drahtlos via Bluetooth übertragen. Daraufhin lokalisiert der Ballwerfer den Korb unter Verwendung eines Smartphones, auf welchem eine entsprechende App läuft. Ist die Position einmal bestimmt, wird diese an den Controller weitergegeben, welcher die Stepper für die Ausrichtung des Werfers betätigt und anschliessend die Motoren für die Ballzuführung startet. Der Ballwerfer selbst ist statisch und richtet sich an der Startposition für einen gewinkelten Wurf aus. Einmal ausgerichtet, werden die Bälle einzeln unter Verwendung von Schwungrädern geworfen.
+In der nachfolgenden Dokumentation wird der Prozess der Konzeptfindung für die Herstellung eines autonomen Ballwerfers beschrieben. Durch die Aufteilung der Aufgabenstellung in Problembereiche werden mehrere unterschiedliche Konzepte geschaffen. Von den erstellten Konzepten wurde eines weiter zu einem Feinkonzept ausgearbeitet, in welchem sämtliche verwendeten Komponenten spezifiziert werden. Als erstes wird das Startsignal von einem Laptop drahtlos via Bluetooth übertragen. Daraufhin lokalisiert der fixstehende Ballwerfer den Korb unter Verwendung einer Smartphonekamera, auf welchem eine entsprechende Applikation zur Korberkennung läuft. Ist die Position einmal bestimmt, wird die Position an den Controller weitergegeben, welcher den Steppermotor für die Ausrichtung des Werfers betätigt und anschliessend die Ballzuführung startet. Der Ballwerfer selbst ist statisch und richtet sich an der Startposition für einen gewinkelten Wurf aus. Einmal ausgerichtet, werden die Bälle einzeln unter Verwendung von Schwungrädern geworfen.
