--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -53,6 +53,7 @@
     \input{Enddokumentation/Loesungskonzept/Controller}
     \input{Enddokumentation/Loesungskonzept/AufbauMechanik}
     \input{Enddokumentation/Loesungskonzept/Stelleinheit}
+    \newpage
     \input{Enddokumentation/Loesungskonzept/Foerderband}
     \input{Enddokumentation/Loesungskonzept/Schwungraeder}
     \input{Enddokumentation/Loesungskonzept/Antriebsstrang}
