ver Varianten korrigiert

--- a/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
+++ b/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
@@ -15,7 +15,7 @@ in  Abbildung \ref{fig:Funktionsskizze} ersichtlich ist.\\
 \\
 Nach der Ermittlung dieser Teilprobleme mussten für die einzelnen Bereiche nach Lösungsansätzen
 recherchiert werden. Die Resultate dieser Recherche, sowie die danach folgende Bewertung der
-gefundenen Lösungen ist aus Platzgründen im Anhang hinterlegt. Um die Ergebnisse der Bewertung
+gefundenen Lösungen ist aus Platzgründen im Anhangsdokument hinterlegt. Um die Ergebnisse der Bewertung
 sinnvoll als Entscheidungshilfe einsetzen zu können, wurden sie kompakt zu einem Grobkonzept
 zusammengefasst.\\
 \\
@@ -46,7 +46,7 @@ erfolgversprechendste und effizienteste Lösung, bezüglich der Zielsetzung des 
 \begin{tabular}{p{1cm}p{10cm}}
 	\multirow{3}{4cm}	{\includegraphics[width=1cm]{Enddokumentation/Varianten/Bilder/info_icon.png}}
 	 & Die detaillierte Beschreibung der Lösungsfindung (von der Funktionsskizze bis zum
-	 Feinkonzept) war Aufgabe des zweiten Testates und ist als Dokument im Anhang beigelegt. \\
+	 Feinkonzept) war Aufgabe des zweiten Testates und ist als Dokument im Anhangsdokument beigelegt. \\
 \end{tabular}\\
 \\
 \\
