--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -28,6 +28,7 @@
     % Inhaltsverzeichnis umbenennen und anschliessend einen Seitenumbruch
     % 
     \renewcommand{\contentsname}{Inhalt}
+    \setcounter{tocdepth}{3}
     \tableofcontents
     \newpage
     %
