--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -68,16 +68,19 @@
 %    %
     % Tests
     %
-    \newpage
+    \clearpage
+    \section{Testberichte}
 %    \input{Enddokumentation/Tests/Tests}
     \input{Funktionstests/Ballmaschine}
+    \newpage
     \input{Funktionstests/Pneumatikzylinder}
+    \newpage
     \input{Funktionstests/BallmaschineDrehzahl}
+    \newpage
     \input{Enddokumentation/Tests/AcrylglasTest}
     \newpage
     \input{Enddokumentation/Tests/BrushlessMotorTest}
-
-    \newpage
+    \clearpage
     %
     % Projektführung
     %
